# build-up-python-for-little-geniuses

./: .gitignore  CHANGELOG.md  NOTICE.md  README.md  build-up.tex  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
assets/: capture_game_screenshot.py  design-brief.md  generate_chapters.py  generate_diagrams.py  generate_sprites.py
assets/kenney/: ATTRIBUTION.md
assets/visual-system-extracted/: BadgeIcons.dc.html  BinderTreatment.dc.html  ChapterBannerTemplate.dc.html  CheckpointGraphics.dc.html  MascotPoses.dc.html  README.md  Visual System Style Guide.dc.html
book/00-welcome/: 00-index.tex  01-how-to-read-this-book.tex  02-how-we-teach.tex  03-taking-care-of-you.tex
code_project/build_game/: game.py  world.py
code_project/foundations/: ch00_welcome.py  ch01_variables.py  ch02_arithmetic.py  ch03_strings.py  ch04_conditionals.py  ch05_lists.py  ch06_for_loops.py  ch07_while_loops.py  ch08_functions.py  ch09_area_perimeter.py  ch10_grid.py  ch11_dictionaries.py  ch12_chance.py  ch13_classes.py  ch14_debugging.py  ch15_capstone.py
code_project/little_genius/: README.md
code_project/tests/: test_ch10_grid.py  (+17 more)
notebooks/: ch00_welcome.ipynb  ch01_variables.ipynb  ch02_arithmetic.ipynb  ch03_strings.ipynb  ch04_conditionals.ipynb  ch05_lists.ipynb  ch06_for_loops.ipynb  ch07_while_loops.ipynb  ch08_functions.ipynb  ch09_area_perimeter.ipynb  ch10_grid.ipynb  ch11_dictionaries.ipynb  ch12_chance.ipynb  ch13_classes.ipynb  ch14_debugging.ipynb  ch15_capstone.ipynb
web/: .eleventy.js  package-lock.json  package.json  screenshot.js
(+20 files in other folders)
